Opened 12 years ago
Closed 11 years ago
#9448 closed bug (fixed)
[notification_server] doesn't monitor screen resolution
Reported by: | diver | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/notification_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev45257.
Changing resolution while notification_server shows a notification detaches it from Deskbar.
Attachments (1)
Change History (4)
by , 11 years ago
Attachment: | 0001-Fix-9448.-notification_server-monitors-screen-resolu.patch added |
---|
comment:1 by , 11 years ago
patch: | 0 → 1 |
---|
comment:2 by , 11 years ago
comment:3 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Applied in hrev47875.