Fix #9448. [notification_server] monitors screen resolution